fix(components): fix dark mode token usage of FlipButton

--- a/packages/swirl-components/src/components/flip-button/flip-button.css
+++ b/packages/swirl-components/src/components/flip-button/flip-button.css
@@ -218,17 +218,17 @@
 
 .button--variant-floating {
   color: var(--s-text-default);
-  background-color: var(--s-background-default);
+  background-color: var(--s-surface-overlay-default);
   box-shadow: 0.125rem 0.25rem 2.5rem rgba(0, 0, 0, 0.14);
 
   &:hover {
     color: var(--s-text-on-action-primary);
-    background-color: var(--s-background-default);
+    background-color: var(--s-surface-overlay-hovered);
   }
 
   &:active {
     color: var(--s-text-on-action-primary);
-    background-color: var(--s-background-default);
+    background-color: var(--s-surface-overlay-pressed);
   }
 
   &.button--icon-only {
